fix(i18n): remove duplicate string in Optional Information copy

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -77,7 +77,8 @@
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.subtitle": "We've sent an one-time passcode to example@bit.cr",
   "pages.onboarding.emailVerification.title": "Verify your email address",
-  "pages.onboarding.optionalInformation.continue": "Skip for now",
+  "pages.onboarding.optionalInformation.continue": "Continue",
+  "pages.onboarding.optionalInformation.skip": "Skip for now",
   "pages.onboarding.optionalInformation.subtitle": "This information will give you better credibility with your counter parties",
   "pages.onboarding.optionalInformation.title": "Optional information",
   "pages.onboarding.requiredInformation.continue": "Continue",
