chore(lint): fix lint errors and warnings

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,4 +1,10 @@
 {
+  "contacts.empty.create": "Create contact",
+  "contacts.empty.description": "Create your first contact to start a relation",
+  "contacts.empty.title": "No contacts yet",
+  "contacts.header.create": "New contact",
+  "contacts.header.title": "Contacts",
+  "contacts.search.placeholder": "Search for contacts...",
   "layout.navigation.ebills": "E-bills",
   "layout.navigation.home": "Home",
   "layout.navigation.search": "Search",
@@ -24,6 +30,11 @@
   "pages.bills.selectDates": "Select dates",
   "pages.bills.startCreating": "Start creating a bill and distribute it to your contacts",
   "pages.bills.title": "Bills",
+  "pages.createContact.cancel": "Cancel",
+  "pages.createContact.header.title": "New contact",
+  "pages.createContact.save": "Save",
+  "pages.createContact.search": "Search contacts",
+  "pages.createContact.viewAllFields": "View more",
   "pages.home.balances.contingent": "Contingent",
   "pages.home.balances.payee": "Payee",
   "pages.home.balances.payer": "Payer",
