chore(i18n): translation key format (bills)

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,4 +1,18 @@
 {
+  "Against this bill of exchange": "Against this bill of exchange",
+  "All": "All",
+  "Bills": "Bills",
+  "Contingent": "Contingent",
+  "Endorse": "Endorse",
+  "Issue bill": "Issue bill",
+  "Maturity": "Maturity",
+  "No bills issued yet": "No bills issued yet",
+  "Payee": "Payee",
+  "Payer": "Payer",
+  "Request to accept": "Request to accept",
+  "Search for bills": "Search for bills...",
+  "Select date": "Select date",
+  "Start creating a bill and distribute it to your contacts": "Start creating a bill and distribute it to your contacts",
   "contacts.empty.create": "Create contact",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
@@ -17,19 +31,6 @@
   "pages.bill.preview.heading": "Against this bill of exchange",
   "pages.bill.preview.invoice": "Invoice",
   "pages.bill.preview.noProtest": "No protest",
-  "pages.bill.view.endorse": "Endorse",
-  "pages.bill.view.heading": "Against this bill of exchange",
-  "pages.bill.view.requestToAccept": "Request to accept",
-  "pages.bills.all": "All",
-  "pages.bills.contingent": "Contingent",
-  "pages.bills.empty": "No bills issued yet",
-  "pages.bills.issueBill": "Issue a bill",
-  "pages.bills.orderByMaturity": "Maturity",
-  "pages.bills.payee": "Payee",
-  "pages.bills.payer": "Payer",
-  "pages.bills.selectDates": "Select dates",
-  "pages.bills.startCreating": "Start creating a bill and distribute it to your contacts",
-  "pages.bills.title": "Bills",
   "pages.createContact.cancel": "Cancel",
   "pages.createContact.header.title": "New contact",
   "pages.createContact.save": "Save",
