feat(discount): initial discount form (WIP)

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,95 +1,123 @@
 {
-  "A strong trade credit solution, directly between businesses": "A strong trade credit solution, directly between businesses",
-  "A strong trade credit solution. Directly between businesses": "A strong trade credit solution. Directly between businesses",
-  "Accept": "Accept",
-  "Against the sum of": "Against the sum of",
-  "Against this bill of exchange": "Against this bill of exchange",
-  "All": "All",
-  "Balances": "Balances",
-  "Based on proven Bitcoin tech, free to download and use for everyone.": "Based on proven Bitcoin tech, free to download and use for everyone.",
-  "Bills": "Bills",
-  "Birth date": "Birth date",
-  "Bitcoin for the real economy": "Bitcoin for the real economy",
   "Calculate discount": "Calculate discount",
-  "Cancel": "Cancel",
-  "City of birth": "City of birth",
-  "Clear all": "Clear all",
-  "Confirm identity": "Confirm identity",
-  "Contacts": "Contacts",
-  "Contingent": "Contingent",
-  "Continue": "Continue",
-  "Country of birth": "Country of birth",
-  "Create contact": "Create contact",
-  "Create new identity": "Create new identity",
-  "Create your first contact to start a relation": "Create your first contact to start a relation",
-  "E-bills": "E-bills",
-  "Email address": "Email address",
-  "Encrypted data": "Encrypted data",
-  "Endorse": "Endorse",
-  "Endorse to the order of": "Endorse to the order of",
-  "Enter app": "Enter app",
-  "Filter": "Filter",
-  "Forgot your PIN?": "Forgot your PIN?",
-  "Home": "Home",
-  "Identity document": "Identity document",
-  "Invoice": "Invoice",
-  "Issue a bill": "Issue a bill",
-  "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
-  "Issue bill": "Issue bill",
-  "Legal full name": "Legal full name",
-  "Maturity": "Maturity",
-  "Mint": "Mint",
-  "Mint a bill": "Mint a bill",
-  "New contact": "New contact",
-  "New identity": "New identity",
-  "No banks involved. Works even in a banking crisis": "No banks involved. Works even in a banking crisis",
-  "No bills issued yet": "No bills issued yet",
-  "No contacts yet": "No contacts yet",
-  "No notifications": "No notifications",
-  "No protest": "No protest",
-  "Notifications": "Notifications",
-  "Open email inbox": "Open email inbox",
-  "Optional information": "Optional information",
-  "Paste from clipboard": "Paste from clipboard",
-  "Pay": "Pay",
-  "Payee": "Payee",
-  "Payer": "Payer",
-  "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
-  "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
-  "Please fill in your personal details, all details are handled confidentially": "Please fill in your personal details, all details are handled confidentially",
-  "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
-  "Postal address": "Postal address",
-  "Preview": "Preview",
-  "Recover with seed phrase": "Recover with seed phrase",
-  "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
-  "Request to accept": "Request to accept",
-  "Required information": "Required information",
-  "Resend ({delay})": "Resend ({delay})",
-  "Restore identity": "Restore identity",
-  "Restore with seed phrase": "Restore with seed phrase",
-  "Save": "Save",
-  "Search": "Search",
-  "Search contacts": "Search contacts",
-  "Search for bills": "Search for bills...",
-  "Search for contacts...": "Search for contacts...",
-  "See all": "See all",
-  "See history": "See history",
-  "Select date": "Select date",
-  "Sell": "Sell",
-  "Sell a bill": "Sell a bill",
-  "Settings": "Settings",
-  "Sign": "Sign",
-  "Sign to confirm": "Sign to confirm",
-  "Skip for now": "Skip for now",
-  "Social security number": "Social security number",
-  "Start creating a bill and distribute it to your contacts": "Start creating a bill and distribute it to your contacts",
-  "Successfully created your identity": "Successfully created your identity",
-  "This information will give you better credibility with your counter parties": "This information will give you better credibility with your counter parties",
-  "To the order of": "To the order of",
-  "Unlock with PIN": "Unlock with PIN",
-  "Unlock with PIN code": "Unlock with PIN code",
-  "Verify your email address": "Verify your email address",
-  "View more": "View more",
-  "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
-  "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}"
+  "Confirm": "Confirm",
+  "Dates": "Dates",
+  "Days": "Days",
+  "Discount rate": "Discount rate",
+  "Gross amount": "Gross amount",
+  "Mark up": "Mark up",
+  "Net amount": "Net amount",
+  "Please enter a valid value.": "Please enter a valid value.",
+  "contacts.empty.create": "Create contact",
+  "contacts.empty.description": "Create your first contact to start a relation",
+  "contacts.empty.title": "No contacts yet",
+  "contacts.header.create": "New contact",
+  "contacts.header.title": "Contacts",
+  "contacts.search.placeholder": "Search for contacts...",
+  "layout.navigation.ebills": "E-bills",
+  "layout.navigation.home": "Home",
+  "layout.navigation.search": "Search",
+  "layout.navigation.settings": "Settings",
+  "onboarding.first.title": "A strong trade credit solution. Directly between businesses",
+  "onboarding.fourth.title": "Based on proven Bitcoin tech, free to download and use for everyone.",
+  "onboarding.second.title": "No banks involved. Works even in a banking crisis",
+  "onboarding.third.title": "Reduces the risk of default and the loss in case of default.",
+  "pages.bill.issue.sign": "Sign",
+  "pages.bill.preview.heading": "Against this bill of exchange",
+  "pages.bill.preview.invoice": "Invoice",
+  "pages.bill.preview.noProtest": "No protest",
+  "pages.bill.view.endorse": "Endorse",
+  "pages.bill.view.heading": "Against this bill of exchange",
+  "pages.bill.view.requestToAccept": "Request to accept",
+  "pages.bills.all": "All",
+  "pages.bills.contingent": "Contingent",
+  "pages.bills.empty": "No bills issued yet",
+  "pages.bills.issueBill": "Issue a bill",
+  "pages.bills.orderByMaturity": "Maturity",
+  "pages.bills.payee": "Payee",
+  "pages.bills.payer": "Payer",
+  "pages.bills.selectDates": "Select dates",
+  "pages.bills.startCreating": "Start creating a bill and distribute it to your contacts",
+  "pages.bills.title": "Bills",
+  "pages.createContact.cancel": "Cancel",
+  "pages.createContact.header.title": "New contact",
+  "pages.createContact.save": "Save",
+  "pages.createContact.search": "Search contacts",
+  "pages.createContact.viewAllFields": "View more",
+  "pages.home.balances.contingent": "Contingent",
+  "pages.home.balances.payee": "Payee",
+  "pages.home.balances.payer": "Payer",
+  "pages.home.balances.title": "Balances",
+  "pages.home.ebills.filter": "Filter",
+  "pages.home.ebills.seeAll": "See all",
+  "pages.home.ebills.title": "E-bills",
+  "pages.identityCreation.createNewIdentity.newIdentity": "Create new identity",
+  "pages.identityCreation.createNewIdentity.subtitle": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
+  "pages.identityCreation.createNewIdentity.title": "Encrypted data",
+  "pages.issueBill.billInformation": "Against this bill of exchange",
+  "pages.issueBill.billInformation.noProtest": "No protest",
+  "pages.issueBill.billInformation.orderOf": "To the order of",
+  "pages.issueBill.billInformation.payer": "Payer",
+  "pages.issueBill.preview": "Preview",
+  "pages.issueBill.subtitle": "Issue a promissory note where you, the drawer, commit to making the payment",
+  "pages.issueBill.title": "Issue a bill",
+  "pages.login.newIdentity": "New identity",
+  "pages.login.restoreWithSeedPhrase": "Restore with seed phrase",
+  "pages.login.subtitle": "A strong trade credit solution, directly between businesses",
+  "pages.login.title": "Bitcoin for the real economy",
+  "pages.login.unlockWithPin": "Unlock with PIN",
+  "pages.mintBill.billInformation.calculateDiscount": "Calculate discount",
+  "pages.mintBill.billInformation.orderOf": "Endorse to the order of",
+  "pages.mintBill.billInformation.value": "Against the sum of",
+  "pages.mintBill.mint": "Mint",
+  "pages.mintBill.title": "Mint a bill",
+  "pages.notifications.accept": "Accept",
+  "pages.notifications.all": "All",
+  "pages.notifications.empty": "No notifications",
+  "pages.notifications.history": "See history",
+  "pages.notifications.issueBill": "Issue a bill",
+  "pages.notifications.pay": "Pay",
+  "pages.notifications.startCreating": "Start creating a bill and distribute it to your contacts",
+  "pages.notifications.title": "Notifications",
+  "pages.onboarding.confirmIdentity.birthDate": "Birth date",
+  "pages.onboarding.confirmIdentity.cityOfBirth": "City of birth",
+  "pages.onboarding.confirmIdentity.countryOfBirth": "Couyntry of birth",
+  "pages.onboarding.confirmIdentity.emailAddress": "Email address",
+  "pages.onboarding.confirmIdentity.identityDocument": "Identity document",
+  "pages.onboarding.confirmIdentity.legalFullName": "Legal full name",
+  "pages.onboarding.confirmIdentity.optionalInformation": "Optional information",
+  "pages.onboarding.confirmIdentity.postalAddress": "Postal address",
+  "pages.onboarding.confirmIdentity.requiredInformation": "Required information",
+  "pages.onboarding.confirmIdentity.signToConfirm": "Sign to confirm",
+  "pages.onboarding.confirmIdentity.socialSecurityNumber": "Social security number",
+  "pages.onboarding.confirmIdentity.subtitle": "Please check if all the details are correct before proceeding",
+  "pages.onboarding.confirmIdentity.title": "Confirm identity",
+  "pages.onboarding.emailVerification.continue": "Continue",
+  "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
+  "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
+  "pages.onboarding.emailVerification.subtitle": "We've sent an one-time passcode to example@bit.cr",
+  "pages.onboarding.emailVerification.title": "Verify your email address",
+  "pages.onboarding.optionalInformation.continue": "Continue",
+  "pages.onboarding.optionalInformation.skip": "Skip for now",
+  "pages.onboarding.optionalInformation.subtitle": "This information will give you better credibility with your counter parties",
+  "pages.onboarding.optionalInformation.title": "Optional information",
+  "pages.onboarding.requiredInformation.continue": "Continue",
+  "pages.onboarding.requiredInformation.subtitle": "Please fill in your personal details, all details are handled confidentially",
+  "pages.onboarding.requiredInformation.title": "Required information",
+  "pages.onboarding.success.enterApp": "Enter app",
+  "pages.onboarding.success.subtitle": "We have successfully created your identity and you can now use the app",
+  "pages.onboarding.success.title": "Successfully created your identity",
+  "pages.recoverWithSeedPhrase.clear": "Clear all",
+  "pages.recoverWithSeedPhrase.description": "Please paste in your seed phrase to recover your identity",
+  "pages.recoverWithSeedPhrase.paste": "Paste from clipboard",
+  "pages.recoverWithSeedPhrase.restoreIdentity": "Restore identity",
+  "pages.recoverWithSeedPhrase.title": "Recover with seed phrase",
+  "pages.sellBill.billInformation.calculateDiscount": "Calculate discount",
+  "pages.sellBill.billInformation.orderOf": "Endorse to the order of",
+  "pages.sellBill.billInformation.value": "Against the sum of",
+  "pages.sellBill.sell": "Sell",
+  "pages.sellBill.title": "Sell a bill",
+  "pages.unlock.forgotPin": "Forgot your PIN?",
+  "pages.unlock.seedPhraseRecovery": "Recover with seed phrase",
+  "pages.unlock.title": "Unlock with PIN code"
 }
