chore: setup new identity flow

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -70,25 +70,26 @@
   "pages.notifications.pay": "Pay",
   "pages.notifications.startCreating": "Start creating a bill and distribute it to your contacts",
   "pages.notifications.title": "Notifications",
+  "pages.onboarding.confirmIdentity.agreeToTerms": "I agree to the Terms and conditions",
   "pages.onboarding.confirmIdentity.birthDate": "Birth date",
   "pages.onboarding.confirmIdentity.cityOfBirth": "City of birth",
-  "pages.onboarding.confirmIdentity.countryOfBirth": "Couyntry of birth",
+  "pages.onboarding.confirmIdentity.countryOfBirth": "Country of birth",
   "pages.onboarding.confirmIdentity.emailAddress": "Email address",
   "pages.onboarding.confirmIdentity.identityDocument": "Identity document",
   "pages.onboarding.confirmIdentity.legalFullName": "Legal full name",
   "pages.onboarding.confirmIdentity.optionalInformation": "Optional information",
   "pages.onboarding.confirmIdentity.postalAddress": "Postal address",
   "pages.onboarding.confirmIdentity.requiredInformation": "Required information",
-  "pages.onboarding.confirmIdentity.signToConfirm": "Sign to confirm",
+  "pages.onboarding.confirmIdentity.signToConfirm": "Sign",
   "pages.onboarding.confirmIdentity.socialSecurityNumber": "Social security number",
   "pages.onboarding.confirmIdentity.subtitle": "Please check if all the details are correct before proceeding",
-  "pages.onboarding.confirmIdentity.title": "Confirm identity",
+  "pages.onboarding.confirmIdentity.title": "Preview identity",
   "pages.onboarding.emailVerification.continue": "Continue",
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.subtitle": "We've sent an one-time passcode to example@bit.cr",
   "pages.onboarding.emailVerification.title": "Verify your email address",
-  "pages.onboarding.optionalInformation.continue": "Continue",
+  "pages.onboarding.optionalInformation.continue": "Skip for now",
   "pages.onboarding.optionalInformation.skip": "Skip for now",
   "pages.onboarding.optionalInformation.subtitle": "This information will give you better credibility with your counter parties",
   "pages.onboarding.optionalInformation.title": "Optional information",
