--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -99,5 +99,21 @@
   "pages.sellBill.title": "Sell a bill",
   "pages.unlock.forgotPin": "Forgot your PIN?",
   "pages.unlock.seedPhraseRecovery": "Recover with seed phrase",
-  "pages.unlock.title": "Unlock with PIN code"
+  "pages.unlock.title": "Unlock with PIN code",
+  "displayRange.days": "{value} days",
+  "displayRange.sixMonths": "6 Months",
+  "displayRange.oneYear": "1 Year",
+  "displayRange.selectRange": "Select range",
+  "months.january": "January",
+  "months.february": "February",
+  "months.march": "March",
+  "months.april": "April",
+  "months.may": "May",
+  "months.june": "June",
+  "months.july": "July",
+  "months.august": "August",
+  "months.september": "September",
+  "months.october": "October",
+  "months.november": "November",
+  "months.december": "December"
 }
