create contacts flow

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,10 +1,28 @@
 {
-  "contacts.empty.create": "Create contact",
+  "Are you sure": "Are you sure?",
+  "Cancel": "Cancel",
+  "Company": "Company",
+  "Contact city of registration": "City of registration",
+  "Contact country of registration": "Country of regitration",
+  "Contact email": "Email address",
+  "Contact postal address": "Postal address",
+  "Contact proof of registration": "Proof of registration",
+  "Contact registration date": "Registration date",
+  "Contact registration number": "Registration number",
+  "Contacts": "Contacts",
+  "Create new contact": "Create new contact",
+  "Delete contact": "Delete",
+  "Edit contact": "Edit contact",
+  "Email address": "Email address",
+  "New Contact": "New contact",
+  "Node ID": "Node ID",
+  "Person": "Person",
+  "Postal address": "Postal address",
+  "Save": "Save",
+  "Upload document": "Upload document",
+  "You can always re-add a contact later": "You can always re-add a contact later",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
-  "contacts.header.create": "New contact",
-  "contacts.header.title": "Contacts",
-  "contacts.search.placeholder": "Search for contacts...",
   "layout.navigation.ebills": "E-bills",
   "layout.navigation.home": "Home",
   "layout.navigation.search": "Search",
@@ -30,11 +48,6 @@
   "pages.bills.selectDates": "Select dates",
   "pages.bills.startCreating": "Start creating a bill and distribute it to your contacts",
   "pages.bills.title": "Bills",
-  "pages.createContact.cancel": "Cancel",
-  "pages.createContact.header.title": "New contact",
-  "pages.createContact.save": "Save",
-  "pages.createContact.search": "Search contacts",
-  "pages.createContact.viewAllFields": "View more",
   "pages.home.balances.contingent": "Contingent",
   "pages.home.balances.payee": "Payee",
   "pages.home.balances.payer": "Payer",
