--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -7,7 +7,7 @@
   "Gross amount": "Gross amount",
   "Mark up": "Mark up",
   "Net amount": "Net amount",
-  "Please enter a valid value.": "Please enter a valid value.",
+  "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
   "contacts.empty.create": "Create contact",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
