--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,4 +1,21 @@
 {
+  "Against this bill of exchange": "Against this bill of exchange",
+  "Cancel": "Cancel",
+  "City of issuing": "City of issuing",
+  "City of payment": "City of payment",
+  "Confirm": "Confirm",
+  "Draw bill": "Draw bill",
+  "Edit issue": "Edit issue",
+  "Go to overview": "Go to overview",
+  "Issue date": "Issue date",
+  "New bill": "New bill",
+  "Place of payment": "Place of payment",
+  "Preview": "Preview",
+  "Preview bill": "Preview bill",
+  "Sign": "Sign",
+  "Success": "Success",
+  "Upload document": "Upload document",
+  "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
   "contacts.empty.create": "Create contact",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
@@ -16,7 +33,7 @@
   "pages.bill.issue.sign": "Sign",
   "pages.bill.preview.heading": "Against this bill of exchange",
   "pages.bill.preview.invoice": "Invoice",
-  "pages.bill.preview.noProtest": "No protest",
+  "pages.bill.preview.noProtest": "No protest. Value received.",
   "pages.bill.view.endorse": "Endorse",
   "pages.bill.view.heading": "Against this bill of exchange",
   "pages.bill.view.requestToAccept": "Request to accept",
@@ -70,6 +87,7 @@
   "pages.notifications.pay": "Pay",
   "pages.notifications.startCreating": "Start creating a bill and distribute it to your contacts",
   "pages.notifications.title": "Notifications",
+  "pages.onboarding.confirmIdentity.agreeToTerms": "I agree to the Terms and conditions",
   "pages.onboarding.confirmIdentity.birthDate": "Birth date",
   "pages.onboarding.confirmIdentity.cityOfBirth": "City of birth",
   "pages.onboarding.confirmIdentity.countryOfBirth": "Couyntry of birth",
