--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -64,6 +64,7 @@
   "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
   "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
+  "Please enter a valid value.": "Please enter a valid value.",
   "Please fill in your personal details, all details are handled confidentially": "Please fill in your personal details, all details are handled confidentially",
   "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
   "Postal address": "Postal address",
