chore(discount): move to distinct directory

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -25,6 +25,7 @@
   "Create your first contact to start a relation": "Create your first contact to start a relation",
   "Dates": "Dates",
   "Days": "Days",
+  "Discount": "Discount",
   "Discount rate": "Discount rate",
   "E-bills": "E-bills",
   "Email address": "Email address",
