--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -60,6 +60,7 @@
   "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
   "Postal address": "Postal address",
   "Preview": "Preview",
+  "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
   "Request to accept": "Request to accept",
