chore: create bottom navigation layout

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -40,6 +40,7 @@
   "Maturity": "Maturity",
   "Mint": "Mint",
   "Mint a bill": "Mint a bill",
+  "New bill": "New bill",
   "New contact": "New contact",
   "New identity": "New identity",
   "No banks involved. Works even in a banking crisis": "No banks involved. Works even in a banking crisis",
@@ -74,6 +75,7 @@
   "Search for bills": "Search for bills...",
   "Search for contacts...": "Search for contacts...",
   "See all": "See all",
+  "See all bills": "See all bills",
   "See history": "See history",
   "Select date": "Select date",
   "Sell": "Sell",
