review(datepicker): align header

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -95,7 +95,7 @@
   "datePicker.button.canvel": "Cancel",
   "datePicker.button.confirm": "Confirm",
   "datePicker.selectDate": "Selected date",
-  "datePicker.selectDateRange": "Selected date range",
+  "datePicker.selectDateRange": "Select date range",
   "displayRange.days": "{value} days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
