feat(#45): discount calculation form (#119)
* feat(discount): add basic test for DiscountForm

* chore(discount): use big.js

* chore(discount): CurrencyAmount value as Big

* chore(discount): disallow 100% discount

* chore(discount): normalize discount rate input

* chore(discount): better error messages

* chore: add formatDate to utils

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -14,6 +14,7 @@
   "Cancel": "Cancel",
   "City of birth": "City of birth",
   "Clear all": "Clear all",
+  "Confirm": "Confirm",
   "Confirm identity": "Confirm identity",
   "Contacts": "Contacts",
   "Contingent": "Contingent",
@@ -22,6 +23,10 @@
   "Create contact": "Create contact",
   "Create new identity": "Create new identity",
   "Create your first contact to start a relation": "Create your first contact to start a relation",
+  "Dates": "Dates",
+  "Days": "Days",
+  "Discount": "Discount",
+  "Discount rate": "Discount rate",
   "E-bills": "E-bills",
   "Email address": "Email address",
   "Encrypted data": "Encrypted data",
@@ -30,6 +35,7 @@
   "Enter app": "Enter app",
   "Filter": "Filter",
   "Forgot your PIN?": "Forgot your PIN?",
+  "Gross amount": "Gross amount",
   "Home": "Home",
   "Identity document": "Identity document",
   "Invoice": "Invoice",
@@ -37,9 +43,11 @@
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
   "Legal full name": "Legal full name",
+  "Mark up": "Mark up",
   "Maturity": "Maturity",
   "Mint": "Mint",
   "Mint a bill": "Mint a bill",
+  "Net amount": "Net amount",
   "New contact": "New contact",
   "New identity": "New identity",
   "No banks involved. Works even in a banking crisis": "No banks involved. Works even in a banking crisis",
@@ -56,6 +64,8 @@
   "Payer": "Payer",
   "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
+  "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
+  "Please enter a valid value.": "Please enter a valid value.",
   "Please fill in your personal details, all details are handled confidentially": "Please fill in your personal details, all details are handled confidentially",
   "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
   "Postal address": "Postal address",
