chore: refactor bills overview page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -47,8 +47,8 @@
   "Maturity": "Maturity",
   "Mint": "Mint",
   "Mint a bill": "Mint a bill",
-  "New bill": "New bill",
   "Net amount": "Net amount",
+  "New bill": "New bill",
   "New contact": "New contact",
   "New identity": "New identity",
   "No banks involved. Works even in a banking crisis": "No banks involved. Works even in a banking crisis",
@@ -87,7 +87,7 @@
   "See all": "See all",
   "See all bills": "See all bills",
   "See history": "See history",
-  "Select date": "Select date",
+  "Select date": "Select dates",
   "Sell": "Sell",
   "Sell a bill": "Sell a bill",
   "Settings": "Settings",
