review(datepicker): style selected date

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -85,6 +85,8 @@
   "See all": "See all",
   "See history": "See history",
   "Select date": "Select date",
+  "Select date range": "Select date range",
+  "Selected date": "Selected date",
   "Sell": "Sell",
   "Sell a bill": "Sell a bill",
   "Settings": "Settings",
@@ -102,10 +104,6 @@
   "View more": "View more",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}",
-  "datePicker.button.canvel": "Cancel",
-  "datePicker.button.confirm": "Confirm",
-  "datePicker.selectDate": "Selected date",
-  "datePicker.selectDateRange": "Select date range",
   "displayRange.days": "{value} days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
