--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -104,13 +104,13 @@
   "View more": "View more",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}",
-  "displayRange.days": "{value} days",
+  "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
   "displayRange.sixMonths": "6 Months",
-  "dropdown.option.1year": "1 year",
-  "dropdown.option.30days": "30 days",
-  "dropdown.option.60days": "60 days",
+  "dropdown.option.1year": "1 Year",
+  "dropdown.option.30days": "30 Days",
+  "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
-  "dropdown.option.90days": "90 days"
+  "dropdown.option.90days": "90 Days"
 }
