fix: add value to select input component

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -43,6 +43,7 @@
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
   "Legal full name": "Legal full name",
+  "Locale": "Locale",
   "Mark up": "Mark up",
   "Maturity": "Maturity",
   "Mint": "Mint",
@@ -89,6 +90,7 @@
   "See history": "See history",
   "Select date": "Select date",
   "Select date range": "Select date range",
+  "Select locale": "Select locale",
   "Selected date": "Selected date",
   "Sell": "Sell",
   "Sell a bill": "Sell a bill",
