chore: create category selection component

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -5,8 +5,10 @@
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
   "All": "All",
+  "Authorised signer": "Authorised signer",
   "Balances": "Balances",
   "Based on proven Bitcoin tech, free to download and use for everyone.": "Based on proven Bitcoin tech, free to download and use for everyone.",
+  "Bill issuer": "Bill issuer",
   "Bills": "Bills",
   "Birth date": "Birth date",
   "Bitcoin for the real economy": "Bitcoin for the real economy",
@@ -42,6 +44,7 @@
   "Issue a bill": "Issue a bill",
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
+  "Issue bills in your own name": "Issue bills in your own name",
   "Legal full name": "Legal full name",
   "Mark up": "Mark up",
   "Maturity": "Maturity",
@@ -94,6 +97,7 @@
   "Sell a bill": "Sell a bill",
   "Settings": "Settings",
   "Sign": "Sign",
+  "Sign bills on behalf of a company": "Sign bills on behalf of a company",
   "Sign to confirm": "Sign to confirm",
   "Skip for now": "Skip for now",
   "Social security number": "Social security number",
