--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -2,6 +2,7 @@
   "A strong trade credit solution, directly between businesses": "A strong trade credit solution, directly between businesses",
   "A strong trade credit solution. Directly between businesses": "A strong trade credit solution. Directly between businesses",
   "Accept": "Accept",
+  "Add photo": "Add photo",
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
   "All": "All",
@@ -11,6 +12,7 @@
   "Bill issuer": "Bill issuer",
   "Bills": "Bills",
   "Birth date": "Birth date",
+  "Birth date (MM/DD/YYYY)": "Birth date (MM/DD/YYYY)",
   "Bitcoin for the real economy": "Bitcoin for the real economy",
   "Calculate discount": "Calculate discount",
   "Cancel": "Cancel",
@@ -30,6 +32,7 @@
   "Discount": "Discount",
   "Discount rate": "Discount rate",
   "E-bills": "E-bills",
+  "Edit": "Edit",
   "Email address": "Email address",
   "Encrypted data": "Encrypted data",
   "Endorse": "Endorse",
@@ -37,8 +40,10 @@
   "Enter app": "Enter app",
   "Filter": "Filter",
   "Forgot your PIN?": "Forgot your PIN?",
+  "Full name": "Full name",
   "Gross amount": "Gross amount",
   "Home": "Home",
+  "I agree to the Terms and conditions": "I agree to the Terms and conditions",
   "Identity document": "Identity document",
   "Invoice": "Invoice",
   "Issue a bill": "Issue a bill",
@@ -62,11 +67,13 @@
   "Notifications": "Notifications",
   "Open email inbox": "Open email inbox",
   "Optional information": "Optional information",
+  "PDF, PNG or JPG (max. 5mb)": "PDF, PNG or JPG (max. 5mb)",
   "Paste from clipboard": "Paste from clipboard",
   "Pay": "Pay",
   "Payee": "Payee",
   "Payer": "Payer",
   "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
+  "Personal identity": "Personal identity",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
   "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
   "Please enter a valid value.": "Please enter a valid value.",
@@ -74,6 +81,7 @@
   "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
   "Postal address": "Postal address",
   "Preview": "Preview",
+  "Preview identity": "Preview identity",
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
@@ -103,10 +111,12 @@
   "Social security number": "Social security number",
   "Start creating a bill and distribute it to your contacts": "Start creating a bill and distribute it to your contacts",
   "Successfully created your identity": "Successfully created your identity",
+  "This information is optional but helps you to build a credit score": "This information is optional but helps you to build a credit score",
   "This information will give you better credibility with your counter parties": "This information will give you better credibility with your counter parties",
   "To the order of": "To the order of",
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
+  "Upload document": "Upload document",
   "Verify your email address": "Verify your email address",
   "View more": "View more",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
